Add support for AWS EMF 1 second Storage Resolution in the AWS EMF Exporter
This change implements the capability for users of the AWS EMF Exporter to specify
which metrics they would like to have sent to CloudWatch with a 1 second Storage
Resolution. The EMF Exporter now explicitly states the Storage Resolution for each
metric as 60 seconds, the previous implicit default, so there is no behavior
change. If the user specifies a metric to have 1 second resolution it will be
sent to CloudWatch EMF with the Storage Resolution set accordingly.

Previously the AWS EMF Exporter sent metric data into CloudWatch without
specifying the storage resolution. CloudWatch would then default to a 60 second
storage resolution, even if metrics are sent more frequently than every 60
seconds. This would confuse users when they try to apply functions like AVG,
SUM, MAX, or MIN to their metrics with a period of 5 seconds. The function would
be applied by CloudWatch to 60 seconds worth of data and produced unexpected
results and confusion for the user. This commit makes this 60 second resolution
explicit in the messages sent to CloudWatch by the EMF Exporter and also gives
the user the option to specify a more granular 1 second resolution per metric
in the configuration file of the AWS EMF Exporter.

--- a/exporter/awsemfexporter/testdata/config.yaml
+++ b/exporter/awsemfexporter/testdata/config.yaml
@@ -13,3 +13,4 @@ awsemf/metric_descriptors:
     - metric_name: memcached_current_items
       unit: Count
       overwrite: true
+      storage_resolution: 1
